--- a/news/static/news/css/news.css
+++ b/news/static/news/css/news.css
@@ -1,50 +1,12 @@
-/*.colM {*/
-/*    margin: 10% 15% 20% 25%;*/
-/*    font-family: Comic Sans MS, Comic Sans, cursive;*/
-/*    color: #00D4C6;*/
-/*}*/
-
-/*.colM h1{*/
-/*    margin-bottom: 5%;*/
-/*}*/
-
-/*.flex-container {*/
-/*    position: relative;*/
-/*    margin-bottom: 20px;*/
-/*}*/
-
-/*.flex-container label {*/
-/*    position: absolute;*/
-/*    top: -20px;*/
-/*    left: 0;*/
-/*    font-weight: bold;*/
-/*}*/
-
-/*textarea {*/
-/*     height: 100px;*/
-/*     margin-bottom: 2%;*/
-/*}*/
-
-/*.colM input{*/
-/*    margin-bottom: 2%;*/
-/*    font-size: 30px;*/
-/*}*/
-
-/*.colM select {*/
-/*    margin-bottom: 2%;*/
-/*    font-size: 30px;*/
-/*}*/
-
-/*.colM label {*/
-/*    font-size: 20px;*/
-/*    margin: -1% 0% 0% 0%;*/
-/*}*/
+#content {
+  background-color: #fafafa;
+}
 
 #content-main {
   max-width: 600px;
   margin: auto;
-    margin-top: 15%;
-  background-color: #f9f9f9;
+    margin-top: 10%;
+  background-color: #f5f5f5;
   padding: 20px;
   border-radius: 4px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -97,6 +59,7 @@
 }
 
 .form-category select {
+  height: 150px;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -126,7 +89,13 @@
 
 @media (max-width: 1200px) {
   #content-main {
-    margin-top: 230px;
+    margin-top: 130px;
+  }
+}
+
+@media (max-width: 1029px) {
+  #content-main {
+    margin-top: 100px;
   }
 }
 
